fix(styling): fix overlapping eye-icon in comment field added customer-visible-icon to analysis-edit

--- a/app/components/tracking-bar/styles.scss
+++ b/app/components/tracking-bar/styles.scss
@@ -31,3 +31,9 @@
     width: 100%;
   }
 }
+
+@media #{$xs-viewport} {
+  .form-control {
+    padding-right: 35px;
+  }
+}
